# PokeApi

./: readme.md  readme2.md
PokeAPILibrary/: build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
PokeAPILibrary/doc/: Component.puml  Component_shipped.puml
PokeAPILibrary/src/jvmTest/kotlin/: PokeApiTest.kt  TestPokeApiClient.kt
PokeAPILibrary/src/jvmTest/resources/: pikachu.json
PokeApplicationC/: CMakeLists.txt  readme.md
PokeApplicationC/libs/: native
PokeApplicationC/src/: main.c
PokeApplicationCpp/: readme.md
PokeApplicationKotlinNative/: build.gradle.kts  readme.md
PokeApplicationKotlinNative/src/nativeMain/kotlin/: Logger.kt  Main.kt
PokeApplicationMultiplatform/PokeUI/: .gitignore  gradle.properties  local.properties  readme.md  settings.gradle.kts
PokeApplicationMultiplatform/PokeUI/android/: build.gradle.kts
PokeApplicationMultiplatform/PokeUI/common/: build.gradle.kts
PokeApplicationWeb/: readme.md
PokeNativeC/: CMakeLists.txt  readme.md
PokeNativeC/libs/: native
PokeNativeC/src/: main.c
PokeNativeLib/: build.gradle.kts  gradle.properties  readme.md
PokeNativeLib/doc/: Class_overview.puml  Sequence.puml
PokeNativeLib/src/commonMain/kotlin/: CurlExecutor.kt  (+3 more)
PokeNativeLib/src/nativeExecutable/: main.c
PokeUIMultiplatform/PokeUI/: build.gradle.kts  gradle.properties  readme.md
PokeUIMultiplatform/PokeUI/android/: build.gradle.kts
PokeUIMultiplatform/PokeUI/common/: build.gradle.kts
PokeUIMultiplatform/PokeUI/desktop/: build.gradle.kts
Pokemon/: build.gradle.kts  readme.md  settings.gradle.kts
(+66 files in other folders)
